# xiaozhi_chat

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/Com/: Com_Debug.h  Com_utilt.c  Com_utilt.h
main/Commu/: Commu_ws.c  Commu_ws.h
main/audio_process/: audio_decode.c  audio_decode.h  audio_encode.c  audio_encode.h  audio_sr.c  audio_sr.h
main/bsp/: bsp_ledc.c  bsp_ledc.h  bsp_sound.c  bsp_sound.h  bsp_wifi.c  bsp_wifi.h  bsp_ws2812.c  bsp_ws2812.h
main/display/: display.c  display.h
main/iot/: descriptions.txt  display.txt  iot.c  iot.h  states.txt  ws2812.txt
main/ota/: ota.c  ota.h
